# diglet

./: Makefile  README.md  diglet.pro
src/: CMakeLists.txt  constants.h  constants.h~  misc.pro
src/binaryoperations/: binaryoperations.pri
src/clientcpp/: CMakeLists.txt  client.cpp  client.h  clientcpp.pro  main.cpp
src/include/: constants.h
src/lss/: 0  1  CMakeLists.txt  info.h  lss.cpp  lss.h  lss.pro  lssconsole.cpp  lssconsole.h  lssmain.cpp  lssmanager.cpp  lssmanager.cpp~  lssmanager.h  lssnetworkhandler.cpp  lssnetworkhandler.h  lssoperations.cpp  lssoperations.cpp~  lssoperations.h  lssxml.cpp  lssxml.h  lssxml.h~  mainc  makefile  tester  tester.cpp
src/md5/: CMakeLists.txt  md5.cpp  md5.pri
src/network/clientcpp/: clientcpp.pro
src/network/principalserver/: servernetworkhandler.h
src/networkhandler/: CMakeLists.txt  networkhandler.cpp  networkhandler.h  networkhandler.pri  test.cpp
src/principalserver/: CMakeLists.txt  Makefile  constants.h  constants_trash.h  databuffer.cpp  databuffer.h  datanode.cpp  datanode.h  disk.cpp  disk.h  diskgroup.cpp  diskgroup.h  generalmanager.cpp  generalmanager.h  info.h  main.cpp  noraid.cpp  noraid.h  principalserver.pro  registerbuffer.cpp  registerbuffer.h  registerspace.cpp  registerspace.h  serverconsole.cpp  serverconsole.h  servernetworkhandler.cpp  servernetworkhandler.h  serveroperations.cpp  serveroperations.h  session.cpp  session.h  storageclient.cpp  storageclient.h  user.cpp  user.h
src/structures/: CMakeLists.txt  structures.pri
src/structures/avltree/: abstractbinarytree.h  avltree.h
src/structures/doublelinkedlist/: doublelinkedlist.h
src/structures/ntree/: ifile.cpp  ifile.h  main.cpp  ntree.cpp  ntree.h  ntreenode.cpp  (+1 more)
src/tokenizer/: CMakeLists.txt  tokenizer  tokenizer.cpp  tokenizer.h  tokenizer.pri
src/util/: util.pri
src/xml/: CMakeLists.txt  clientsxml.cpp  clientsxml.h  diskgroupsxml.cpp  diskgroupsxml.h  diskgroupsxml.h~  diskxml.cpp  diskxml.h  lssxml.cpp  main.cpp  parserxml.cpp  parserxml.h  usersxml.cpp  usersxml.h  usersxml.h~  xml.pri  xml.pri~
(+6 files in other folders)
