
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)

PROJECT(RAICHU)

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE xml)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE binaryoperations)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE clientcpp)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE lss)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE md5)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE networkhandler)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE principalserver)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE structures)
# INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE tokenizer)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include INCLUDE bin)



ADD_DEFINITIONS("-Wall")
ADD_DEFINITIONS("-std=c++11")


# ADD_SUBDIRECTORY(xml)
ADD_SUBDIRECTORY(binaryoperations)
ADD_SUBDIRECTORY(clientcpp)
ADD_SUBDIRECTORY(lss)
ADD_SUBDIRECTORY(md5)
ADD_SUBDIRECTORY(networkhandler)
ADD_SUBDIRECTORY(principalserver)
# ADD_SUBDIRECTORY(structures)
# ADD_SUBDIRECTORY(tokenizer)

ADD_SUBDIRECTORY(bin)
